feat: 用户画像纳入 Telegram 身份信息